Added: 	404.html 	barcode.html 	barcode.js 	qr.js Modified: 	footer.html 	index.html 	navbar.html 	script.js 	style.css

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
     <div class="footer-links">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="index.html">QR Code Generator</a></li>
+        <li><a href="barcode.html">Barcode Generator</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>&copy; 2025 QRPro. All rights reserved.</p>
+    <p>Free QR & Barcode Generator | Made with <i class="fa fa-heart" style="color: red;"></i> by <a href="/" target="_blank" rel="noopener noreferrer" style="color:var(--primary);text-decoration: none;">Ajay</a></p>
   </div>
 </footer>
