--- a/navbar.html
+++ b/navbar.html
@@ -10,6 +10,7 @@
         
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html" class="active"><i class="ri-home-line"></i>Home</a></li>
+            <li><a href="barcode.html" class="active"><i class="ri-barcode-line"></i>Barcode</a></li>
             <li><a href="blog.html"><i class="ri-article-line"></i>Blog</a></li>
             <li><a href="about.html"><i class="ri-information-line"></i>About</a></li>
             <li><a href="privacy.html"><i class="ri-shield-line"></i>Privacy Policy</a></li>
