--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
       document.getElementById("navbarContainer").innerHTML = data;
     });
 </script>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '9ddd9f9edc9fd5f6851c9bee42cf6d0c',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9ddd9f9edc9fd5f6851c9bee42cf6d0c/invoke.js"></script>
 
 <h1>Free QR Code Generator</h1>
 <h2>Customize your QR Code with Logo, Colors, and More</h2>
