--- a/footer.html
+++ b/footer.html
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Free QR & Barcode Generator | Made with <i class="fa fa-heart" style="color: red;"></i> by <a href="/" target="_blank" rel="noopener noreferrer" style="color:var(--primary);text-decoration: none;">Ajay</a></p>
+    <p>&copy; 2025 Free QR & Barcode Generator | Made with <i class="fa fa-heart" style="color: red;"></i> by <a href="/" target="_blank" rel="noopener noreferrer" style="color:var(--primary);text-decoration: none;">Ajay</a></p>
   </div>
 </footer>
